# ros2_simple_fleet_management

./: README.md
fleet_management_pkg/: CMakeLists.txt  package.xml
fleet_management_pkg/launch/: fleet_system.launch.py
fleet_management_pkg/scripts/: fleet_manager.py  robot1.py  robot2.py  visualizer.py
fleet_management_pkg/srv/: GetRobotState.srv
